--- a/si-app/.gitignore
+++ b/si-app/.gitignore
@@ -4,6 +4,7 @@
 /dist-server
 /tmp
 /out-tsc
+/dist
 
 # dependencies
 /node_modules
@@ -40,3 +41,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
